Save tracker function

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -119,7 +119,7 @@
 
 					<div class="has-text-centered mt-4" id="tracker-editor-buttons-main">
 						<i class="las la-trash-alt la-3x" onclick="GUI.trackerEditorDelete();"></i>
-						<i class="las la-save la-3x"></i>
+						<i class="las la-save la-3x" onclick="GUI.trackerEditorSave();"></i>
 					</div>
 					<div class="has-text-centered mt-4" id="tracker-editor-buttons-delete">
 						<h3 class="is-size-3">Delete?</h3>
