Tracker rendering, final GUI functions

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -29,15 +29,17 @@
 
 		<section class="section pb-0 mb-0" id="empty-start-message">
 			<h2 class="has-text-centered is-size-3 has-text-grey">
-				Welcome! To get started, tap the "<i class="las la-plus-circle"></i>".
+				Welcome! To get started, tap the
+				<span class="text-no-line-break">"<i class="las la-plus-circle"></i>".</span>
 			</h2>
 		</section>
 
 		<section class="section" id="tracker-container">
+			<!-- The following box is a template and is deleted on page load. -->
 			<div class="box">
 				<article class="media is-size-3">
 					<div class="media-left">
-						<i class="las la-cookie-bite"></i> Sugar
+						<i class="las la-cookie-bite"></i>&nbsp;Template
 					</div>
 					<div class="media-content"></div>
 					<div class="media-right">
@@ -47,6 +49,22 @@
 
 				<progress class="progress is-success is-large  mb-0 mt-0" value="60" max="100" data-label="1 Day"></progress>
 				<p class="has-text-centered has-text-grey mt-0 pt-0 is-size-4">Next goal: 1 day</p>
+
+				<div class="box">
+					<div class="field">
+						<label class="label">Money Saved</label>
+						<div class="control">
+							<span class="is-size-4">$1,000</span>
+						</div>
+					</div>
+
+					<div class="field">
+						<label class="label">Time Saved</label>
+						<div class="control">
+							<span class="is-size-4">1 hour(s)</span>
+						</div>
+					</div>
+				</div>
 
 				<p class="has-text-centered mt-4">
 					<i class="las la-edit la-3x"></i>
