--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -25,6 +25,12 @@
 					</h1>
 				</div>
 			</div>
+
+			<div class="hero-foot">
+				<p class="has-text-right has-text-grey">
+					<i class="las la-info-circle la-4x" onclick="GUI.showAbout(true);"></i>
+				</p>
+			</div>
 		</section>
 
 		<section class="section pb-0 mb-0" id="empty-start-message">
@@ -143,6 +149,49 @@
 						<h3 class="is-size-3">Delete?</h3>
 						<i class="las la-check la-3x" onclick="GUI.trackerEditorDeleteConfirm();"></i>
 						<i class="las la-times la-3x" onclick="GUI.trackerEditorDeleteCancel();"></i>
+					</div>
+				</section>
+			</div>
+		</div>
+
+		<div class="modal" style="display: block;" id="about">
+			<div class="modal-background"></div>
+			<div class="modal-card mt-3" style="width: auto;">
+				<header class="modal-card-head">
+					<p class="modal-card-title">About</p>
+				</header>
+				<section class="modal-card-body">
+					<div class="content">
+						<p>
+							Sobriety Tracker is an app to aide in quitting various addictions by
+							counting the time since they have been participated in.
+						</p>
+
+						<p>
+							View at: github.com/itsmaxymoo/SobrietyTracker
+						</p>
+
+						<h3 style="font-weight: normal;">Third Party Technologies</h3>
+						<ul>
+							<li>
+								<b>Bulma</b> for CSS styling.
+							</li>
+							<li>
+								<b>Line Awesome</b> icons.
+							</li>
+							<li>
+								<b>Titillium</b> web font.
+							</li>
+						</ul>
+
+						<p class="has-text-centered">
+							Made by Max Loiacono<br />
+							github.com/itsmaxymoo
+						</p>
+					</div>
+
+					<div class="has-text-centered mt-4">
+						<i class="las la-times-circle la-3x" onclick="GUI.showAbout(false);"></i>
 					</div>
 				</section>
 			</div>
