Tracker editor cancel button, big fix

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -138,6 +138,7 @@
 					<div class="has-text-centered mt-4" id="tracker-editor-buttons-main">
 						<i class="las la-trash-alt la-3x" onclick="GUI.trackerEditorDelete();"></i>
 						<i class="las la-save la-3x" onclick="GUI.trackerEditorSave();"></i>
+						<i class="las la-times la-3x" onclick="GUI.trackerEditorCancel();"></i>
 					</div>
 					<div class="has-text-centered mt-4 starts-hidden" id="tracker-editor-buttons-delete">
 						<h3 class="is-size-3">Delete?</h3>
