App icon and fixed scrolling modal bug

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -80,7 +80,7 @@
 			<i class="las la-info-circle la-4x mt-4" onclick="GUI.showAbout(true);"></i>
 		</section>
 
-		<div class="modal starts-hidden" style="display: block;" id="tracker-editor">
+		<div class="modal is-active starts-hidden" id="tracker-editor">
 			<data id="tracker-editor-id"></data>
 
 			<div class="modal-background"></div>
@@ -149,7 +149,7 @@
 			</div>
 		</div>
 
-		<div class="modal starts-hidden" style="display: block;" id="about">
+		<div class="modal is-active starts-hidden" id="about">
 			<div class="modal-background"></div>
 			<div class="modal-card mt-3" style="width: auto;">
 				<header class="modal-card-head">
