--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -82,6 +82,7 @@
 
 		<div class="modal is-active starts-hidden" id="tracker-editor">
 			<data id="tracker-editor-id"></data>
+			<data id="tracker-editor-is-new"></data>
 
 			<div class="modal-background"></div>
 			<div class="modal-card mt-3" style="width: auto;">
