--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -211,8 +211,10 @@
 					<data id="pin-entered" value=""></data>
 					<data id="pin-clearing" value=false></data>
 
-					<div class="columns mt-6 pt-3 is-centered is-gapless">
-						<div class="column is-full-mobile is-4-tablet is-full-touch is-3-desktop is-3-widescreen is-3-fullhd">
+					<section class="section"></section>
+
+					<div class="columns mt-6 pt-6 is-centered is-gapless">
+						<div class="column is-4 is-full-mobile is-4-tablet is-3-desktop is-3-widescreen is-3-fullhd">
 							<div class="columns mt-6 is-centered has-text-centered is-size-2 is-gapless is-multiline is-mobile">
 								<div class="column is-one-third pin-key" onclick="GUI.pinKey(1);">
 									1
