--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -139,8 +139,8 @@
 					<div class="field">
 						<label class="label">Tolerance Calculator</label>
 						<label class="checkbox">
-							<input type="checkbox" id="tracker-editor-edit-is-tryptamine">
-							Tryptamine
+							<input class="is-checkradio is-dark" id="tracker-editor-edit-is-tryptamine" type="checkbox">
+							<label for="tracker-editor-edit-is-tryptamine" style="position: static;">Tryptamine</label>
 						</label>
 					</div>
 
