--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -138,7 +138,7 @@
 
 					<div class="field">
 						<label class="label">Tolerance Calculator</label>
-						<label class="checkbox">
+						<label class="checkbox" style="-webkit-tap-highlight-color:  rgba(255, 255, 255, 0);">
 							<input class="is-checkradio is-dark" id="tracker-editor-edit-is-tryptamine" type="checkbox">
 							<label for="tracker-editor-edit-is-tryptamine" style="position: static;">Tryptamine</label>
 						</label>
