--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -209,7 +209,7 @@
 			<div class="modal-background"></div>
 			<div class="modal-card modal-fullscreen">
 				<section class="modal-card-body">
-					<h1 class="is-size-2 has-text-centered app-title">Enter PIN</h1>
+					<h1 class="is-size-2 has-text-centered app-title" id="pin-title">PIN</h1>
 					<p class="has-text-centered is-size-3 mt-6" id="pin-display">
 						<span id="pin-display-1">&#9675;</span>
 						<span id="pin-display-2">&#9675;</span>
